# 1c_hbk_bsl

./: .gitignore  .gitleaks.toml  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  env.example  pyproject.toml
docker/: Dockerfile  docker-compose.yml
docs/: BSLLS_BASELINE.md  BSLLS_PARITY.md  CLIENT_SERVER_DIAGNOSTICS.md  DATA_SOURCES.md  FORMATTER_DIAGNOSTICS.md  LSP_BRIDGE_PATH_MAPPING.md  Production-Notes.md  SECURITY_AUDIT.md  THIRD_PARTY_NOTICES.md  architecture.md  bsl_rules_matrix.md  cst_policy.md  diagnostics_rule_invoke.md  metadata_registry.md
packaging/: onec-hbk-bsl.spec
scripts/: README.md  bench_compare.py  bench_generate_fixtures.py  bench_per_rule.py  bench_profile.py  bench_timing.py  compare_diag_baseline.py  compare_diag_bslls.py  format_compare_bslls.py  generate_platform_api.py  host_to_lsp_bridge_uri.py  import_bsl_globals.py  release.sh  reset_extension_placeholder.py  run_bslls_parity.sh  sync_version.py
tests/: conftest.py  test_baseline.py  test_bsl_string_regions.py  test_bsl_string_split.py  test_call_graph.py  test_cli_check.py  test_compare_diag_baseline.py  test_config.py  test_db_path.py  test_diag_baseline_fixture.py  test_diag_cst_bsl009_bsl059.py  test_diag_cst_migration.py  test_diagnostics.py  test_diagnostics_extended.py  test_diagnostics_rule_registry.py  test_fix_engine.py  test_format_compare_script.py  test_formatter.py  test_formatter_ast_spacing.py  test_formatter_diagnostics_parity.py  test_formatter_structural.py  test_git_utils.py  test_indexer.py  test_lsp_positions.py  test_lsp_server.py  test_main.py  test_mcp_server.py  test_metadata_refs_diagnostic.py  test_metadata_registry.py  test_parser.py  test_symbols.py  (+4 more)
(+157 files in other folders)
