[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onec-hbk-bsl"
version = "0.7.0"
description = "1C Enterprise BSL: MCP server, LSP server, and CLI linter"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tree-sitter>=0.24,<0.26",
    "tree-sitter-bsl>=0.1.6",
    "watchfiles>=0.24",
    "fastmcp>=2.0,<4",
    "pygls>=1.3",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
onec-hbk-bsl = "onec_hbk_bsl.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/onec_hbk_bsl --cov-report=term-missing --cov-fail-under=50"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
omit = [
    "*/tests/*",
]
source = ["src/onec_hbk_bsl"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "S", "UP"]
ignore = [
    "E501",
    "S101",   # assert used in tests
    "S104",   # host="0.0.0.0" intentional for Docker
    "S110",   # try/except pass — intentional fallbacks
    "S603",   # subprocess with fixed args (git diff)
    "S607",   # git from PATH — system dependency
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["onec_hbk_bsl"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "ruff>=0.4",
]
